<resources>
    <string name="app_name">Hamahaki</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="list_fragment_label">List Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">0</string>
    <string name="loading_description">Ladataan tuotteita...</string>
    <string name="testbtn">testbtn</string>
    <string name="seach_word">Type here</string>
    <string name="hae_hakusanalla">Hae hakusanalla:</string>
    <string name="monta_hakua">Monta hakutulosta näytetään?</string>
    <string name="hae">Hae</string>
    <string name="tuotetta_ladattu">Tuotetta ladattu</string>
    <string name="loading_max">/0</string>
    <string name="verkkokauppa">Verkkokauppa.com</string>
    <string name="gigantti">Gigantti.fi</string>
    <string name="veikonkone">Veikonkone.fi</string>
    <string name="haetaan">Mistä haetaan?</string>
    <string name="listview_title">Title</string>
    <string name="priceText">price</string>
    <string name="tab_gigantti">gigantti.fi</string>
    <string name="tab_veikonkone">veikonkone.fi</string>
</resources>